final fixes under semi-final